# Lit-diag

./: .gitignore  README.md  get.sh  pyproject.toml  setup.py
src/lit_diag/: __init__.py  __main__.py  cli.py  shell.py  updater.py
src/lit_diag/engine/: config.py  module_loader.py  privilege.py  runner.py
src/lit_diag/modules/: base.py  cuda_tests.py  driver.py  gpu.py  infiniband.py  kernel_logs.py  nvlink.py  pcie.py  storage.py  system.py  thermal.py
src/lit_diag/output/: formatters.py  report.py
src/lit_diag/remediation/: dcgm_install.py  gpu_reset.py
src/lit_diag/utils/: colors.py  commands.py  deps.py
