[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-diag"
dynamic = ["version"]
description = "Client-first GPU cluster diagnostics tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Joe Mannix"},
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
lit-diag = "lit_diag.cli:main"

[tool.setuptools.dynamic]
version = {attr = "lit_diag.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
